# CONECTIFY

./: .env  .gitignore  README.md  auto-reconnect-bridge.js  index.html  ipc-improvements.js  logger.js  main.js  package-lock.json  package.json  preload.js  security.js  validation.js  vite.config.js
bridge/: bridge-init.js  index.js  package.json  server.js
bridge/scripts/: ae-bridge.js  ae-script.jsx  install.js  resolve-bridge.js  resolve-bridge.lua
cli/MCP/: ae-bridge-server.js  start-ae-bridge.sh
src/: main.js  theme.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: WelcomeScreen.jsx
src/services/: bridgeService.js  pathService.js  supabaseService.js
src/styles/: WelcomeScreen.css  cinematic.css
